[gd_scene load_steps=4 format=3 uid="uid://bj0wscnker5f"]

[ext_resource type="Script" uid="uid://ik5gx1n5mvhd" path="res://screens/game/debug_components/dbug_trigger_animation_hud/dbug_trigger_animation_hud.gd" id="1_l0v8d"]
[ext_resource type="FontFile" uid="uid://c037te0jknb01" path="res://global_assets/fonts/Molot.otf" id="2_eekob"]
[ext_resource type="Script" uid="uid://dq2a4curbk3io" path="res://screens/game/components/background_scene/animation_trigger/animation_trigger.gd" id="3_kpvjg"]

[node name="DbugTriggerAnimationBtn" type="Button"]
offset_right = 135.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 35
text = "triger anim"
script = ExtResource("1_l0v8d")

[node name="AnimationTypesOptBtn" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 72.0
offset_right = 195.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("2_eekob")
theme_override_font_sizes/font_size = 35

[node name="AnimationTrigger" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_kpvjg")
metadata/_custom_type_script = "uid://dq2a4curbk3io"

[connection signal="pressed" from="." to="." method="_on_pressed"]
